--- a/html/index.html
+++ b/html/index.html
@@ -8,7 +8,7 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
           integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
 
@@ -29,19 +29,19 @@
         <div class="collapse navbar-collapse" id="navmenu">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="index.html">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">About</a>
+                    <a class="nav-link" href="about.html">About</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Employees</a>
+                    <a class="nav-link" href="team.html">Employees</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Apply</a>
+                    <a class="nav-link" href="apply.html">Apply</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Train</a>
+                    <a class="nav-link" href="courses.html">Train</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#contact">Contact</a>
@@ -55,7 +55,7 @@
 <section class="banner text-center text-black p-5 text-md-start">
     <div class="container-fluid">
         <div class="d-sm-flex align-items-center justify-content-between">
-            <img src="img/modified/logo-transparent.png" class="img-fluid w-25 d-none d-md-block"
+            <img src="../img/modified/logo-transparent.png" class="img-fluid w-25 d-none d-md-block"
                  alt="Responsive image, depicts Hotbeans logo">
             <div class="mx-3 my-2">
                 <h1 class="text-info fw-bolder">Welcome!</h1>
@@ -73,14 +73,14 @@
 <!-- team -->
 <div class="team">
     <div class="content d-flex">
-        <img src="img/modified/Daniel_Lecroy-bg.png" class="img-fluid" alt="Daniel Lecroy">
-        <img src="img/Li%20Chang.PNG" class="img-fluid" alt="Li Chang">
-        <img src="img/Rosa_DeCastello.jpg" class="img-fluid" alt="Rosa DeCastello">
+        <img src="../img/modified/Daniel_Lecroy-bg.png" class="img-fluid" alt="Daniel Lecroy">
+        <img src="../img/Li%20Chang.PNG" class="img-fluid" alt="Li Chang">
+        <img src="../img/Rosa_DeCastello.jpg" class="img-fluid" alt="Rosa DeCastello">
     </div>
     <div class="overlay d-flex">
-        <img src="img/modified/Daniel_Lecroy-transparent.png" class="img-fluid" alt="" href="#">
-        <img src="img/modified/Li%20Chang-transparent.png" class="img-fluid" alt="" href="#">
-        <img src="img/modified/Rosa_DeCastello-transparent.png" class="img-fluid" alt="" href="#">
+        <img src="../img/modified/Daniel_Lecroy-transparent.png" class="img-fluid" alt="" href="#">
+        <img src="../img/modified/Li%20Chang-transparent.png" class="img-fluid" alt="" href="#">
+        <img src="../img/modified/Rosa_DeCastello-transparent.png" class="img-fluid" alt="" href="#">
     </div>
 </div>
 
@@ -97,14 +97,14 @@
                 </p>
                 <button type="button" class="btn btn-primary">Learn More</button>
             </div>
-            <img src="img/Offices.jpg" class="image-fluid w-50 d-none d-md-block rounded-circle"
+            <img src="../img/Offices.jpg" class="image-fluid w-50 d-none d-md-block rounded-circle"
                  alt="Hot Beans WEB Offices">
         </div>
     </div>
 </section>
 
-<!-- form -->
-<section class="contact text-center text-black p-5 text-md-start">
+<!-- form/contact -->
+<section class="text-center text-black p-5 text-md-start" id="contact">
     <div class="container">
         <h3 class="mb-3 mb-md-0">Contact us:</h3>
         <form class="row p-2">
