--- a/src/about.html
+++ b/src/about.html
@@ -8,7 +8,7 @@
           href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css"
           integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT"
           crossorigin="anonymous">
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
@@ -21,7 +21,6 @@
                 class="navbar-toggler"
                 type="button"
                 data-bs-toggle="collapse"
-
                 data-bs-target="#navmenu">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -44,7 +43,7 @@
                     <a class="nav-link" href="courses.html">Train</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#contact">Contact</a>
+                    <a class="nav-link" href="index.html#contact">Contact</a>
                 </li>
             </ul>
         </div>
@@ -55,7 +54,7 @@
 <section class="banner text-center text-black p-5 text-md-start">
     <div class="container-fluid">
         <div class="d-sm-flex align-items-center justify-content-between">
-            <img src="../img/modified/logo-transparent.png" class="img-fluid w-25 d-none d-md-block"
+            <img src="img/modified/logo-transparent.png" class="img-fluid w-25 d-none d-md-block"
                  alt="Responsive image, depicts Hotbeans logo">
             <div class="mx-3 my-2">
                 <h1 class="text-info fw-bolder">Welcome!</h1>
@@ -67,57 +66,6 @@
                 <button type="button" class="btn btn-primary">Find out about us</button>
             </div>
         </div>
-    </div>
-</section>
-
-<!-- team -->
-<div class="team">
-    <div class="content d-flex">
-        <img src="../img/modified/Daniel_Lecroy-bg.png" class="img-fluid" alt="Daniel Lecroy">
-        <img src="../img/Li%20Chang.PNG" class="img-fluid" alt="Li Chang">
-        <img src="../img/Rosa_DeCastello.jpg" class="img-fluid" alt="Rosa DeCastello">
-    </div>
-    <div class="overlay d-flex">
-        <img src="../img/modified/Daniel_Lecroy-transparent.png" class="img-fluid" alt="" href="#">
-        <img src="../img/modified/Li%20Chang-transparent.png" class="img-fluid" alt="" href="#">
-        <img src="../img/modified/Rosa_DeCastello-transparent.png" class="img-fluid" alt="" href="#">
-    </div>
-</div>
-
-<!-- message -->
-<section class="message text-center text-white p-5 text-md-start">
-    <div class="container">
-        <div class="d-sm-flex align-items-center justify-content-between">
-            <div class="mx-3 my- text-black">
-                <h2 class="fw-bold text-warning">We're Hiring!</h2>
-                <p class="lead fw-normal">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-                <button type="button" class="btn btn-primary">Learn More</button>
-            </div>
-            <img src="../img/Offices.jpg" class="image-fluid w-50 d-none d-md-block rounded-circle"
-                 alt="Hot Beans WEB Offices">
-        </div>
-    </div>
-</section>
-
-<!-- form/contact -->
-<section class="text-center text-black p-5 text-md-start" id="contact">
-    <div class="container">
-        <h3 class="mb-3 mb-md-0">Contact us:</h3>
-        <form class="row p-2">
-            <div class="col-12">
-                <textarea type="text" class="input-group" placeholder="Your message here..." aria-label="message"></textarea>
-            </div>
-            <div class="col-md-7">
-                <input type="email" class="input-group" placeholder="Your email here..." aria-label="email">
-            </div>
-            <div class="col-md-5">
-                <button class="btn btn-outline-primary btn-block w-100 lh-1" type="submit">Submit</button>
-            </div>
-        </form>
     </div>
 </section>
 
