Added to employee page Made clicking logo return to index on all pages

--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
 </section>
 
 <!-- team -->
-<section class="team">
+<section class="team_home">
     <div class="content d-flex">
         <img src="img/modified/Daniel_Lecroy-bg.png" class="img-fluid" alt="Daniel Lecroy">
         <img src="img/Li%20Chang.PNG" class="img-fluid" alt="Li Chang">
@@ -87,7 +87,7 @@
 <section class="message text-center text-white p-5 text-md-start">
     <div class="container">
         <div class="d-sm-flex align-items-center justify-content-between">
-            <div class="mx-3 my- text-black">
+            <div class="mx-3 text-black">
                 <h2 class="fw-bold text-warning">We're Hiring!</h2>
                 <p class="lead fw-normal">
                     Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt
