--- a/src/about.html
+++ b/src/about.html
@@ -15,7 +15,7 @@
 <!-- navbar -->
 <nav class="navbar navbar-expand-lg bg-dark navbar-dark py-3">
     <div class="container">
-        <a class="navbar-brand" href="#">Hot Beans WEB</a>
+        <a class="navbar-brand" href="index.html">Hot Beans WEB</a>
 
         <button
                 class="navbar-toggler"
