Began apply page Fixed card related scaling issue on mobile

--- a/src/team.html
+++ b/src/team.html
@@ -55,10 +55,10 @@
 
 <!-- hero banner -->
 <section class="hero-banner text-center p-5 text-md-start">
-    <div class="card bg-dark" style="width: 18rem;">
+    <div class="card bg-dark" style="width: 50vw; max-width: 18rem;">
         <div class="card-body">
             <h1 class="card-title fw-bolder text-white">About the team!</h1>
-            <a href="#" class="btn btn-primary">Join us</a>
+            <a href="apply.html" class="btn btn-primary">Join us</a>
         </div>
     </div>
 </section>
@@ -67,10 +67,9 @@
     <div class="container">
         <div class="team_mobile row row-cols-md-2 gy-3 p-2 align-items-center">
             <div class="col-md-5 order-md-0">
-                <img src="img/Daniel_Lecroy.jpg" class="img-fluid" alt="Daniel Lecroy" id="Daniel"
-                     onclick="HideShow('daniel')">
+                <img src="img/Daniel_Lecroy.jpg" class="img-fluid" alt="Daniel Lecroy" onclick="HideShow('daniel')">
             </div>
-            <div class="col-md-7 order-md-0 d-none d-md-block" id="daniel_text">
+            <div class="col-md-7 order-md-0 d-none d-md-block" id="daniel">
                 <h2 class="text-white text-center">Daniel Lecroy</h2>
                 <p>I'm Daniel and probably not the typical designer positioned behind an Illustrator artboard adjusting
                     pixels, but I design.
@@ -92,9 +91,9 @@
 
             </div>
             <div class="col-md-5 order-md-2">
-                <img src="img/Li%20Chang.PNG" class="img-fluid" alt="Li Change" id="Li" onclick="HideShow('li')">
+                <img src="img/Li%20Chang.PNG" class="img-fluid" alt="Li Change" onclick="HideShow('li')">
             </div>
-            <div class="col-md-7 order-md-1 d-none d-md-block" id="li_text">
+            <div class="col-md-7 order-md-1 d-none d-md-block" id="li">
                 <h2 class="text-white text-center">Li Chang</h2>
                 <p>
                     Hello! My name is Li and I enjoy creating things that live on the internet.
@@ -145,10 +144,10 @@
                 </p>
             </div>
             <div class="col-md-5 order-md-3">
-                <img src="img/Rosa_DeCastello.jpg" class="img-fluid" alt="Rosa DeCastello" id="Rosa"
+                <img src="img/Rosa_DeCastello.jpg" class="img-fluid" alt="Rosa DeCastello"
                      onclick="HideShow('rosa')">
             </div>
-            <div class="col-md-7 order-md-3 d-none d-md-block" id="rosa_text">
+            <div class="col-md-7 order-md-3 d-none d-md-block" id="rosa">
                 <h2 class="text-white text-center">Rosa DeCastello</h2>
                 <p>
                     Hi I'm Rosa and I have a real passion for Creative design, I'm never happier than when I'm pushing
