--- a/src/index.html
+++ b/src/index.html
@@ -54,16 +54,20 @@
 <section class="banner text-center text-black p-5 text-md-start">
     <div class="container-fluid">
         <div class="d-sm-flex align-items-center justify-content-between">
-            <img src="img/modified/logo-transparent.png" class="img-fluid w-25 d-none d-md-block"
+            <img src="img/modified/logo-transparent.png" class="img-fluid w-25 d-none d-lg-block"
                  alt="Responsive image, depicts Hotbeans logo">
-            <div class="mx-3 my-2">
-                <h1 class="text-info fw-bolder">Welcome!</h1>
-                <p class="lead my-4 fw-bold">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt
-                    ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
-                    laboris nisi ut aliquip ex ea commodo consequat.
-                </p>
-                <button type="button" class="btn btn-primary">Find out about us</button>
+            <div class="card-title card p-3">
+                <div class="card-body">
+                    <h1 class="text-info fw-bolder">Welcome!</h1>
+                    <p class="lead my-4 fw-bold">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                        incididunt
+                        ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation
+                        ullamco
+                        laboris nisi ut aliquip ex ea commodo consequat.
+                    </p>
+                    <a href="about.html" class="btn btn-primary">Find out about us</a>
+                </div>
             </div>
         </div>
     </div>
@@ -127,4 +131,16 @@
         crossorigin="anonymous">
 </script>
 </body>
+<footer class="d-flex flex-wrap align-items-center justify-content-between p-3">
+    <div class="col-md-4 d-flex align-items-center">
+        <a class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" href="index.html" aria-label="...">
+            <img class="" src="img/modified/logo-transparent.png" alt='logo' style="width: 30px;">
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary">© Hot Beans 2025</span>
+    </div>
+    <div class="d-flex justify-content-end">
+        <p>75 Broadway - Peterborough - PE1 1SY
+        </p>
+    </div>
+</footer>
 </html>
