--- a/src/team.html
+++ b/src/team.html
@@ -63,7 +63,7 @@
     </div>
 </section>
 
-<section class="bios">
+<section style="background-color: darkseagreen">
     <div class="container">
         <div class="team_mobile row row-cols-md-2 gy-3 p-2 align-items-center">
             <div class="col-md-5 order-md-0">
@@ -187,4 +187,16 @@
 </script>
 <script src="script.js"></script>
 </body>
+<footer class="d-flex flex-wrap align-items-center justify-content-between p-3">
+    <div class="col-md-4 d-flex align-items-center">
+        <a class="mb-3 me-2 mb-md-0 text-body-secondary text-decoration-none lh-1" href="index.html" aria-label="...">
+            <img class="" src="img/modified/logo-transparent.png" alt='logo' style="width: 30px;">
+        </a>
+        <span class="mb-3 mb-md-0 text-body-secondary">© Hot Beans 2025</span>
+    </div>
+    <div class="d-flex justify-content-end">
+        <p>75 Broadway - Peterborough - PE1 1SY
+        </p>
+    </div>
+</footer>
 </html>
