Began courses page Tweaked application form Activated "Learn More" button (index)

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
                     ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
                     laboris nisi ut aliquip ex ea commodo consequat.
                 </p>
-                <button type="button" class="btn btn-primary">Learn More</button>
+                <a href="apply.html" class="btn btn-primary">Learn More</a>
             </div>
             <img src="img/Offices.jpg" class="image-fluid w-50 d-none d-md-block rounded-circle"
                  alt="Hot Beans WEB Offices">
